apps/base/netpols/azurenetpols.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
---
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: azure-npm
  namespace: kube-system
  labels:
    app: azure-npm
    addonmanager.kubernetes.io/mode: EnsureExists
spec:
  selector:
    matchLabels:
      k8s-app: azure-npm
  template:
    metadata:
      labels:
        k8s-app: azure-npm
      annotations:
        scheduler.alpha.kubernetes.io/critical-pod: ""
        azure.npm/scrapeable: ""
    spec:
      priorityClassName: system-node-critical
      tolerations:
        - operator: "Exists"
          effect: NoExecute
        - operator: "Exists"
          effect: NoSchedule
        - key: CriticalAddonsOnly
          operator: Exists
      containers:
        - name: azure-npm
          image: mcr.microsoft.com/containernetworking/azure-npm:v1.4.29
          resources:
            limits:
              cpu: 250m
              memory: 300Mi
            requests:
              cpu: 250m
          securityContext:
            privileged: true
          volumeMounts:
            - name: log
              mountPath: /var/log
            - name: xtables-lock
              mountPath: /run/xtables.lock
            - name: protocols
              mountPath: /etc/protocols
            - name: azure-npm-config
              mountPath: /etc/azure-npm
      hostNetwork: true
      nodeSelector:
        kubernetes.io/os: linux
      volumes:
        - name: log
          hostPath:
            path: /var/log
            type: Directory
        - name: xtables-lock
          hostPath:
            path: /run/xtables.lock
            type: File
        - name: protocols
          hostPath:
            path: /etc/protocols
            type: File
        - name: azure-npm-config
          configMap:
            name: azure-npm-config
      serviceAccountName: azure-npm
---
apiVersion: v1
kind: Service
metadata:
  name: npm-metrics-cluster-service
  namespace: kube-system
  labels:
    app: npm-metrics
spec:
  selector:
    k8s-app: azure-npm
  ports:
    - port: 9000
      targetPort: 10091
