apps/base/netpols/fluxallow.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-helm-controller-to-source-controller
  namespace: flux-system
spec:
  podSelector:
    matchLabels:
      app: source-controller
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: helm-controller
  policyTypes:
    - Ingress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-helm-controller-to-notification-controller
  namespace: flux-system
spec:
  podSelector:
    matchLabels:
      app: notification-controller
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: helm-controller
  policyTypes:
    - Ingress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-kustomize-controller-to-source-controller
  namespace: flux-system
spec:
  podSelector:
    matchLabels:
      app: source-controller
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: kustomize-controller
  policyTypes:
    - Ingress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-kustomize-controller-to-notification-controller
  namespace: flux-system
spec:
  podSelector:
    matchLabels:
      app: notification-controller
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: kustomize-controller
  policyTypes:
    - Ingress
